<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <group android:id="@+id/other"
        android:checkableBehavior="single"
        >
        <item
            android:id="@+id/nav_item_wan_android"
            android:checkable="true"
            android:checked="true"
            android:icon="@mipmap/ic_logo"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_item_my_collect"
            android:checkable="true"
            android:icon="@mipmap/ic_logo"
            android:title="@string/collect" />

        <item
            android:id="@+id/nav_item_setting"
            android:checkable="true"
            android:icon="@mipmap/ic_logo"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_item_about_us"
            android:icon="@mipmap/ic_logo"
            android:title="@string/about_me" />

        <item
            android:id="@+id/nav_item_logout"
            android:icon="@mipmap/ic_logo"
            android:title="@string/logout" />
    </group>
</menu>